--- a/src/styles/modal.module.scss
+++ b/src/styles/modal.module.scss
@@ -136,6 +136,7 @@
 .text {
     display: flex;
     flex-direction: row;
+    flex-wrap: wrap;
     align-items: center;
     justify-content: center;
     padding: 0 20px 15px;
