--- a/src/views/Settings/settings.module.scss
+++ b/src/views/Settings/settings.module.scss
@@ -33,7 +33,9 @@
     @media only screen and (max-width:600px) {
         min-width: 290px;
         padding: 15px;
-        flex-grow: 1
+        flex-grow: 1;
+        justify-content: center;
+        align-items: center;
     }
 }
 
