add some font support and doing more of the dashboard, cached user store too
Co-authored-by: Piotr <PiootrA@users.noreply.github.com>

--- a/src/components/Header/header.module.scss
+++ b/src/components/Header/header.module.scss
@@ -27,6 +27,10 @@
     text-decoration: none;
     -webkit-user-select: none;
     user-select: none;
+
+    @media only screen and (max-width: 600px) {
+        font-size: 25px;
+    }
 }
 
 .headerRight {
