--- a/src/components/Modals/GenericModal/genericModal.module.scss
+++ b/src/components/Modals/GenericModal/genericModal.module.scss
@@ -45,50 +45,52 @@
     width: 100%;
     height: 100%;
 
-    &[data-animated="true"] {
-        animation: content linear .3s forwards;
+    @media not (max-width: 600px) {
+        &[data-animated="true"] {
+            animation: content linear .3s forwards;
 
-        @keyframes content {
-            0% {
-                transform: scale(.5);
-                opacity: 0;
-            }
+            @keyframes content {
+                0% {
+                    transform: scale(.5);
+                    opacity: 0;
+                }
 
-            60% {
-                opacity: 1;
-            }
+                60% {
+                    opacity: 1;
+                }
 
-            70% {
-                transform: scale(1.2);
-            }
+                70% {
+                    transform: scale(1.2);
+                }
 
-            100% {
-                transform: scale(1);
-                opacity: 1;
+                100% {
+                    transform: scale(1);
+                    opacity: 1;
+                }
             }
         }
-    }
 
-    &[data-closing="true"] {
-        animation: contentClose linear .3s forwards;
+        &[data-closing="true"] {
+            animation: contentClose linear .3s forwards;
 
-        @keyframes contentClose {
-            0% {
-                transform: scale(1);
-                opacity: 1;
-            }
+            @keyframes contentClose {
+                0% {
+                    transform: scale(1);
+                    opacity: 1;
+                }
 
-            60% {
-                transform: scale(1.2);
-            }
+                60% {
+                    transform: scale(1.2);
+                }
 
-            70% {
-                opacity: 1;
-            }
+                70% {
+                    opacity: 1;
+                }
 
-            100% {
-                transform: scale(.5);
-                opacity: 0;
+                100% {
+                    transform: scale(.5);
+                    opacity: 0;
+                }
             }
         }
     }
@@ -110,7 +112,38 @@
     box-shadow: inset 0 -7px rgba(0, 0, 0, .2), 0 0 4px rgba(0, 0, 0, .15);
 
     @media only screen and (max-width: 600px) {
-        min-width: 350px;
-        width: unset;
+        min-width: unset;
+        box-shadow: unset;
+        border-radius: unset;
+        width: 100%;
+        position: fixed;
+        top: 0;
+        left: 0;
+        transform: none;
+        // animation: .5s ease slideIn forwards;
+
+        // @keyframes slideIn {
+        //     0% {
+        //         bottom: -50%;
+        //     }
+
+        //     100% {
+        //         bottom: 0;
+        //     }
+        // }
+
+        // &[data-closing="true"] {
+        //     animation: .5s ease slideOut forwards;
+
+        //     @keyframes slideOut {
+        //         0% {
+        //             bottom: 0;
+        //         }
+
+        //         100% {
+        //             bottom: -50%;
+        //         }
+        //     }
+        // }
     }
 }
