--- a/src/views/Dashboard/dashboard.module.scss
+++ b/src/views/Dashboard/dashboard.module.scss
@@ -220,6 +220,7 @@
     justify-content: center;
     flex-direction: column;
     border-radius: 7px;
+    font-weight: 700;
     text-decoration: none;
     color: var(--accent-color);
     background-color: var(--primary-color);
@@ -268,16 +269,108 @@
     min-width: fit-content;
 }
 
+.containerHeader {
+    position: absolute;
+    top: -18px;
+    left: -7px;
+    height: 35px;
+    box-shadow: inset 0 -7px rgba(0, 0, 0, 0.2);
+    background-color: var(--primary-color);
+    padding: 4px 4px 8px;
+    border-radius: 7px;
+    z-index: 1;
+}
+
+.containerHeaderInside {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+    width: 100%;
+    box-sizing: border-box;
+    background: var(--primary-color);
+    padding: 0 10px 5px;
+    border-radius: 7px;
+    font-family: "Titan One", sans-serif;
+    color: var(--accent-color);
+    font-size: 25px;
+}
+
 .statsContainer {
     border-radius: 5px;
     background-color: var(--primary-color);
     width: 100%;
     height: 100%;
-    padding: 2px 15px;
+    padding: 40px 15px;
     box-shadow: inset 0 -7px rgba(0, 0, 0, 0.2);
     box-sizing: border-box;
-    color: #fff;
-    position: relative;
+    color: var(--accent-color);
+}
+
+.statsContainerHolder {
+    width: 100%;
+    gap: 10px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+.statContainer {
+    height: 65px;
+    width: calc(50% - 45px);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-flow: column;
+    text-align: center;
+    gap: 10px;
+    box-shadow: inset 0 -7px rgba(0, 0, 0, 0.2);
+    border-radius: 7px;
+    background-color: var(--secondary-color);
+    line-height: 1;
+    padding: 5px 20px 15px 20px;
+
+    @media screen and (max-width: 1375px) {
+        width: 100%;
+    }
+
+    &>img {
+        /* position: absolute;
+        width: 40px;
+        left: 3px;
+        margin-top: 25px; */
+        // transform: rotate(-15deg);
+    }
+}
+
+.statHeader {
+    font-family: "Titan One", sans-serif;
+    font-size: 1rem;
+
+    // I DONT LIKE THIS BECAUSE OF LACK OF SUPPORT
+    // -webkit-text-stroke: .5px #000;
+
+    text-shadow: 0 0 3px rgba(0, 0, 0, 0.5);
+
+    &>img {
+        position: relative;
+        top: 4px;
+        right: 5px;
+        width: 20px;
+    }
+}
+
+.statDivider {
+    width: 100%;
+    height: 3px;
+    background-color: var(--accent-color);
+    opacity: 0.1;
+    border-radius: 7px;
+}
+
+.statValue {
+    font-size: 1rem;
+    font-weight: 700;
 }
 
 .friendsContainer {
@@ -332,11 +425,8 @@
     padding: 10px;
 
     display: flex;
+    justify-content: space-between;
     gap: 20px;
-
-    &>div {
-        width: 100%;
-    }
 }
 
 .auctionStats {
@@ -346,14 +436,23 @@
     min-width: fit-content;
 
     &>div {
-        padding: 10px 15px;
-        border: 2px solid rgba(255, 255, 255, 0.1);
-        border-radius: 5px;
+        height: 65px;
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-flow: column;
+        text-align: center;
+        gap: 10px;
+        box-shadow: inset 0 -7px rgba(0, 0, 0, 0.2);
+        border-radius: 7px;
+        background-color: var(--secondary-color);
+        line-height: 1;
+        padding: 5px 20px 15px 20px;
 
         &>p {
-            margin: 0 0 5px 0;
-            font-size: 1.2rem;
-            text-decoration: underline;
+            font-family: "Titan One", sans-serif;
+            font-size: 1rem;
         }
 
         &>span {
@@ -391,6 +490,7 @@
 }
 
 .yourLiveAuctions {
+    width: 100%;
     display: flex;
     flex-direction: column;
     gap: 15px;
@@ -406,7 +506,7 @@
 
         &>img {
             width: auto;
-            height: 120px;
+            height: 100px;
         }
 
         &>div {
