--- a/src/views/Market/market.module.scss
+++ b/src/views/Market/market.module.scss
@@ -191,3 +191,12 @@
     margin: 0 6px;
     width: auto;
 }
+
+.phaserContainer {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -1;
+}
