finally make inventory css good and and make image urls from blacket cdn

--- a/src/components/Buttons/GenericButton/genericButton.module.scss
+++ b/src/components/Buttons/GenericButton/genericButton.module.scss
@@ -67,7 +67,7 @@
     align-items: center;
     justify-content: center;
     text-align: center;
-    padding: 7px 20px;
+    padding: 7.5px;
     border-radius: 5px;
     transform: translateY(-4px);
     transition: transform .6s cubic-bezier(.3, .7, .4, 1);
