--- a/src/components/Background/background.module.scss
+++ b/src/components/Background/background.module.scss
@@ -16,7 +16,7 @@
     left: 50%;
     background-size: 550px;
     background-position: -100px -100px;
-    background-image: url("/content/background.png");
+    background-image: url("https://cdn.blacket.org/static/content/background.png");
     opacity: var(--background-opacity);
     transform: translate(-50%, -50%) rotate(15deg);
 }
