--- a/src/views/Market/market.module.scss
+++ b/src/views/Market/market.module.scss
@@ -236,7 +236,7 @@
     height: 233px;
     background-size: 2835px 233px;
     background-repeat: no-repeat;
-    background-image: url("/content/packSeelOpen.svg");
+    background-image: url("https://cdn.blacket.org/static/content/packSeelOpen.svg");
 
     &[data-opening="true"] {
         animation: seelPeel .4s steps(8) forwards;
