--- a/src/views/Dashboard/dashboard.module.scss
+++ b/src/views/Dashboard/dashboard.module.scss
@@ -26,7 +26,7 @@
             grid-area: 1 / 2 / 2 / 5;
             height: 195px;
 
-            @media screen and (max-width: 1375px) {
+            @media screen and (max-width: 1350px) {
                 display: none;
             }
         }
@@ -38,7 +38,7 @@
         &:nth-child(4) {
             grid-area: 1 / 5 / 6 / 6;
 
-            @media screen and (max-width: 1375px) {
+            @media screen and (max-width: 1350px) {
                 display: none;
             }
         }
@@ -53,7 +53,7 @@
     }
 }
 
-@media (max-width: 1375px) {
+@media (max-width: 1350px) {
     .parentHolder {
         display: flex;
         flex-direction: column;
@@ -251,7 +251,7 @@
 }
 
 .smallButtonContainer {
-    @media not (max-width: 1375px) {
+    @media not (max-width: 1350px) {
         display: none;
     }
 
@@ -332,27 +332,26 @@
     line-height: 1;
     padding: 5px 20px 15px 20px;
 
-    @media screen and (max-width: 1375px) {
+    @media screen and (max-width: 1350px) {
         width: 100%;
     }
 
-    &>img {
-        /* position: absolute;
+    /* &>img {
+        position: absolute;
         width: 40px;
         left: 3px;
-        margin-top: 25px; */
+        margin-top: 25px;
         // transform: rotate(-15deg);
-    }
+    } */
 }
 
 .statHeader {
     font-family: "Titan One", sans-serif;
     font-size: 1rem;
+    text-shadow: 0 0 3px rgba(0, 0, 0, 0.5);
 
     // I DONT LIKE THIS BECAUSE OF LACK OF SUPPORT
-    // -webkit-text-stroke: .5px #000;
-
-    text-shadow: 0 0 3px rgba(0, 0, 0, 0.5);
+    -webkit-text-stroke: .5px #000;
 
     &>img {
         position: relative;
