--- a/src/views/Inventory/inventory.module.scss
+++ b/src/views/Inventory/inventory.module.scss
@@ -10,6 +10,10 @@
     box-shadow: inset 0 -9px rgba(0, 0, 0, .2), 0 5px rgba(0, 0, 0, .25);
     box-sizing: border-box;
 
+    @media only screen and (max-width: 1000px) {
+        width: calc(95% - 330px);
+    }
+
     @media only screen and (max-width: 685px) {
         top: unset;
         bottom: 0px;
