--- a/src/views/Leaderboard/leaderboard.module.scss
+++ b/src/views/Leaderboard/leaderboard.module.scss
@@ -42,7 +42,7 @@
     }
 }
 
-.placementOne {
+.placement1 {
     position: absolute;
     height: calc(85vh - 65px);
     width: 25vw;
@@ -65,7 +65,7 @@
     }
 }
 
-.placementTwo {
+.placement2 {
     position: absolute;
     height: calc(67.5vh - 65px);
     width: 25vw;
@@ -88,7 +88,7 @@
     }
 }
 
-.placementThree {
+.placement3 {
     position: absolute;
     height: calc(55vh - 65px);
     width: 25vw;
@@ -150,8 +150,8 @@
     text-align: left;
 }
 
-.usernameOne,
-.scoreOne {
+.username1,
+.score1 {
     position: absolute;
     text-align: center;
     width: 20vw;
@@ -159,11 +159,11 @@
     transform: translateX(-50%);
 }
 
-.usernameOne {
+.username1 {
     font-family: "Titan One", sans-serif;
 }
 
-.scoreOne {
+.score1 {
     font-size: 60px;
     height: 7.5vh;
     top: 17vh;
@@ -176,7 +176,7 @@
     }
 }
 
-.placeOne {
+.place1 {
     position: absolute;
     border-radius: 10px;
     box-shadow: inset 0 -7px rgba(0, 0, 0, .2), 0 0 4px rgba(0, 0, 0, .15);
@@ -188,7 +188,7 @@
     background-color: #ffe900;
 }
 
-.avatarOne {
+.avatar1 {
     position: absolute;
     top: calc(100% - 22vw);
     left: 50%;
@@ -204,7 +204,7 @@
     }
 }
 
-.usernameTwo {
+.username2 {
     position: absolute;
     text-align: center;
     width: 20vw;
@@ -213,7 +213,7 @@
     font-family: "Titan One", sans-serif;
 }
 
-.scoreTwo {
+.score2 {
     position: absolute;
     text-align: center;
     width: 20vw;
@@ -232,7 +232,7 @@
     }
 }
 
-.placeTwo {
+.place2 {
     position: absolute;
     border-radius: 10px;
     box-shadow: inset 0 -7px rgba(0, 0, 0, .2), 0 0 4px rgba(0, 0, 0, .15);
@@ -244,7 +244,7 @@
     background-color: #818181;
 }
 
-.avatarTwo {
+.avatar2 {
     position: absolute;
     top: calc(100% - 16.94vw);
     left: 50%;
@@ -260,7 +260,7 @@
     }
 }
 
-.usernameThree {
+.username3 {
     position: absolute;
     text-align: center;
     width: 20vw;
@@ -269,7 +269,7 @@
     font-family: "Titan One", sans-serif;
 }
 
-.scoreThree {
+.score3 {
     position: absolute;
     text-align: center;
     width: 20vw;
@@ -288,7 +288,7 @@
     }
 }
 
-.placeThree {
+.place3 {
     position: absolute;
     height: 6vw;
     width: 6vw;
@@ -300,7 +300,7 @@
     box-shadow: inset 0 -7px rgba(0, 0, 0, .2), 0 0 4px rgba(0, 0, 0, .15);
 }
 
-.avatarThree {
+.avatar3 {
     position: absolute;
     top: calc(100% - 11.995vw);
     left: 50%;
