--- a/src/stores/ContextMenuStore/contextMenu.module.scss
+++ b/src/stores/ContextMenuStore/contextMenu.module.scss
@@ -41,6 +41,12 @@
         margin-left: 10px;
     }
 
+    &>img {
+        width: 20px;
+        height: 20px;
+        object-fit: contain;
+    }
+
     @media (max-width: 768px) {
         border-radius: unset;
     }
