--- a/src/views/Inventory/inventory.module.scss
+++ b/src/views/Inventory/inventory.module.scss
@@ -23,10 +23,10 @@
     }
 }
 
-.blooksHolder {
-    width: 100%;
-    height: 100%;
-    padding: 5px;
+.inventoryHolder {
+    width: 99%;
+    height: calc(100% - 70px);
+    padding-left: 5px;
     overflow-y: auto;
     overflow-x: hidden;
 }
@@ -204,7 +204,7 @@
 
 .rightSide {
     position: absolute;
-    top: 48%;
+    top: 45%;
     transform: translateY(-50%);
     right: 2.5%;
     width: 400px;
@@ -333,6 +333,40 @@
     }
 }
 
+.rightItemImage {
+    display: flex;
+    position: absolute;
+    bottom: 110px;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 220px;
+
+    @media only screen and (max-width: 1000px) {
+        bottom: 60px;
+        width: 100%;
+        transform: scale(0.8);
+    }
+
+    @media only screen and (max-width: 685px) {
+        height: 50%;
+        bottom: 28%;
+        left: 50%;
+        transform: translateX(-50%);
+    }
+
+    &>img {
+        width: 100%;
+        height: 60%;
+        -o-object-fit: contain;
+        object-fit: contain;
+
+        @media only screen and (max-width: 685px) {
+            width: unset;
+        }
+    }
+}
+
 .rightBottomText {
     position: absolute;
     bottom: 25px;
@@ -345,13 +379,26 @@
     text-shadow: 0 0 4px rgba(0, 0, 0, .4);
 
     @media only screen and (max-width: 1000px) {
-        bottom: 15px;
-        font-size: 20px
+        bottom: 20px;
+        font-size: 20px;
     }
 
     @media only screen and (max-width: 685px) {
         text-align: left;
         text-shadow: 0 0 4px rgba(0, 0, 0, 1);
+    }
+}
+
+.rightBottomDescription {
+    width: 100%;
+    height: 50px;
+    word-wrap: break-word;
+    font-size: 20px;
+    font-family: "Nunito", sans-serif;
+    font-weight: 700;
+
+    @media only screen and (max-width: 685px) {
+        height: 35px;
     }
 }
 
