--- a/src/components/TopRight/topRight.module.scss
+++ b/src/components/TopRight/topRight.module.scss
@@ -7,6 +7,7 @@
     z-index: 5;
 
     @media only screen and (max-width: 850px) {
+        position: absolute;
         top: 55px;
     }
 }
@@ -40,6 +41,11 @@
     height: 100%;
 
     &>img {
+        width: 32.5px;
+        margin-right: 10px;
+    }
+
+    &>video {
         width: 32.5px;
         margin-right: 10px;
     }
@@ -109,7 +115,7 @@
     visibility: visible;
 }
 
-.tokenBalance {
+.balance {
     height: 55px;
     background-color: var(--primary-color);
     border-bottom-left-radius: 10px;
