--- a/src/views/Dashboard/dashboard.module.scss
+++ b/src/views/Dashboard/dashboard.module.scss
@@ -88,6 +88,13 @@
 
     &>img {
         height: 110px;
+        width: 100px;
+        filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+    }
+
+    &>video {
+        height: 110px;
+        width: 100px;
         filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
     }
 }
@@ -167,6 +174,11 @@
         height: fit-content;
     }
 
+    &>video {
+        width: 300px;
+        height: fit-content;
+    }
+
     &>p {
         position: absolute;
         left: 50%;
@@ -206,6 +218,12 @@
         align-items: center;
 
         &>img {
+            width: auto;
+            height: 100%;
+            margin-bottom: 5px;
+        }
+
+        &>video {
             width: auto;
             height: 100%;
             margin-bottom: 5px;
@@ -354,6 +372,13 @@
     -webkit-text-stroke: .5px #000;
 
     &>img {
+        position: relative;
+        top: 4px;
+        right: 5px;
+        width: 20px;
+    }
+
+    &>video {
         position: relative;
         top: 4px;
         right: 5px;
