--- a/src/views/Inventory/inventory.module.scss
+++ b/src/views/Inventory/inventory.module.scss
@@ -134,6 +134,18 @@
 
     &>img {
         width: 55px;
+        height: 65px;
+        object-fit: contain;
+        -o-object-fit: contain;
+
+        &[data-locked="true"] {
+            filter: brightness(0);
+        }
+    }
+
+    &>video {
+        width: 55px;
+        height: 65px;
         object-fit: contain;
         -o-object-fit: contain;
 
@@ -200,6 +212,11 @@
         -o-object-fit: contain;
     }
 
+    &>video {
+        width: 55px;
+        object-fit: contain;
+        -o-object-fit: contain;
+    }
 }
 
 .rightSide {
@@ -236,6 +253,19 @@
     user-select: none;
 
     &>img {
+        height: 100%;
+        width: 100%;
+        object-fit: fill;
+        border-radius: 10px;
+
+        @media only screen and (max-width: 685px) {
+            position: absolute;
+            bottom: 0;
+            left: 0;
+        }
+    }
+
+    &>video {
         height: 100%;
         width: 100%;
         object-fit: fill;
@@ -331,6 +361,17 @@
             width: unset;
         }
     }
+
+    &>video {
+        width: 100%;
+        height: 100%;
+        -o-object-fit: contain;
+        object-fit: contain;
+
+        @media only screen and (max-width: 685px) {
+            width: unset;
+        }
+    }
 }
 
 .rightItemImage {
@@ -356,6 +397,17 @@
     }
 
     &>img {
+        width: 100%;
+        height: 60%;
+        -o-object-fit: contain;
+        object-fit: contain;
+
+        @media only screen and (max-width: 685px) {
+            width: unset;
+        }
+    }
+
+    &>video {
         width: 100%;
         height: 60%;
         -o-object-fit: contain;
