--- a/src/views/Market/market.module.scss
+++ b/src/views/Market/market.module.scss
@@ -104,7 +104,7 @@
     margin: 25px 0 35px 0;
     width: 90%;
 
-    @media only screen and (max-width:1010px) {
+    @media only screen and (max-width: 1010px) {
         justify-content: center;
     }
 }
@@ -170,7 +170,7 @@
     bottom: 12px;
     left: 0;
 
-    &>img {
+    & > img {
         width: 16px;
         height: 16px;
         margin-right: 7px;
@@ -342,7 +342,14 @@
     left: 105px;
     width: 190px;
 
-    &>img {
+    & > img {
+        width: 100%;
+        height: 100%;
+        -o-object-fit: contain;
+        object-fit: contain;
+    }
+
+    & > video {
         width: 100%;
         height: 100%;
         -o-object-fit: contain;
