--- a/src/components/SearchBox/searchBox.module.scss
+++ b/src/components/SearchBox/searchBox.module.scss
@@ -27,7 +27,7 @@
 
 .searchInput {
     border: none;
-    margin: 3px 2px;
+    margin: 4px 7px;
     height: 30px;
     width: 100%;
     font-size: 18px;
@@ -36,6 +36,13 @@
     color: var(--accent-color);
     outline: none;
     background-color: var(--background-color);
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+
+    @media screen and (max-width: 850px) {
+        font-size: 16px;
+    }
 }
 
 .searchButtonHolder {
