--- a/src/components/Sidebar/sidebar.module.scss
+++ b/src/components/Sidebar/sidebar.module.scss
@@ -228,7 +228,7 @@
 .notificationIndicator {
     position: absolute;
     right: 7px;
-    border-radius: 50%;
+    border-radius: 5px;
     width: 25px;
     height: 25px;
     background-color: #ff4e4e;
@@ -239,7 +239,7 @@
     color: var(--accent-color);
     font-family: "Titan One", sans-serif;
     box-shadow: inset 0 -2.5px rgba(0, 0, 0, .2);
-    -webkit-text-stroke: 1.25px #000000;
+    -webkit-text-stroke: 1.2px #000000;
     font-size: 20px;
 
     &>div {
