--- a/src/components/TopRight/topRight.module.scss
+++ b/src/components/TopRight/topRight.module.scss
@@ -9,6 +9,9 @@
     @media only screen and (max-width: 850px) {
         position: absolute;
         top: 55px;
+        width: 100%;
+        justify-content: center;
+        align-items: center;
     }
 }
 
@@ -118,8 +121,7 @@
 .balance {
     height: 55px;
     background-color: var(--primary-color);
-    border-bottom-left-radius: 10px;
-    border-bottom-right-radius: 10px;
+    border-radius: 0 0 10px 10px;
     box-sizing: border-box;
     padding: 0 10px 6px;
     box-shadow: inset 0 -6px rgba(0, 0, 0, .2), 0 0 4px rgba(0, 0, 0, .15);
@@ -135,5 +137,16 @@
         width: 30px;
         height: 30px;
         margin-right: 7px;
+
+        @media only screen and (max-width: 850px) {
+            width: 20px;
+            height: 20px;
+        }
+    }
+
+    @media only screen and (max-width: 850px) {
+        height: 35px;
+        margin: 0 5px;
+        font-size: 16px;
     }
 }
